--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -461,7 +461,7 @@ footer{
 .login-text{
     display: flex;
     align-items: center;
-    padding: 55px;
+    padding: 0px 55px;
     .content{
         img{
             height: 350px;
