--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     .current-page{
         color: #D5D5D5;
     }
@@ -28,12 +29,18 @@
 .internal-header{
     background-size: cover;
     background-position: center center;
-    height: 300px;
+    height: 350px;
     background-repeat: no-repeat;
     background-blend-mode: multiply;
     .internal-title{
         h4{
             font-size: 40px;
+        }
+        .sub-internal-title{
+            color: #D9D9D9;
+            font-size: 22px;
+            font-weight: 400;
+            margin: 20px 0;
         }
     }
 }
@@ -321,8 +328,78 @@ i{
     }
 }
 
-.services{
+.inner-services{
     padding: 0;
+}
+
+.categories{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 20px;
+    .single-category{
+        background-color: #E4F5FB;
+        color: #2BB2E1;
+        padding: 8px 15px;
+        font-size: 14px;
+        border-radius: 50px;
+    }
+}
+
+p{
+    .available-on{
+        color: #532259;
+        text-decoration: underline;
+        font-weight: bold;
+    }
+}
+
+.package-card{
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-blend-mode: multiply;
+    height: 300px;
+    width: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: end;
+    padding: 20px;
+    .package-badge{
+        border-radius: 50px;
+        padding: 3px 15px;
+        background-color: #FFFFFF;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: fit-content;
+        span{
+            color: $primary-color;
+            font-size: 12px;
+        }
+    }
+    h3{
+        padding-inline-end: 70px;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+    .location{
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        gap: 8px;
+        span{
+            color: #D9D9D9;
+            font-size: 14px;
+        }
+    }
+}
+
+.services{
     .service-div{
         padding: 30px 0px;
     }
@@ -342,20 +419,288 @@ i{
     }
 }
 
+.offer-end{
+    font-size: 16px;
+    color: #FC0505;
+}
+
+.main-offer{
+    border: 1px solid #DEDEDE;
+    border-radius: 5px;
+    padding: 8px;
+    .offer-img{
+        img{
+            height: 300px;
+            object-fit: cover;
+            width: 100%;
+        }
+    }
+}
+.discover-more{
+    color: #532259;
+    text-decoration: underline;
+    font-size: 16px;
+}
+
+.gap-15{
+    gap: 15px;
+}
+.gap-10{
+    gap: 10px;
+}
+
+.category-badges{
+    width: fit-content;
+    padding: 6px 10px;
+    color: $primary-color;
+    background-color: #E4F5FB;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    span{
+        font-size: 14px;
+    }
+}
+
+.offer-title{
+    margin-top: 15px;
+    h4{
+        font-size: 22px;
+        color: $primary-color;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+}
+.offer-description{
+    p{
+        font-size: 16px;
+        color: $light-primary-color;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        margin-bottom: 10px;
+    }
+}
+
+.details-section{
+    padding: 0px;
+    .details-div{
+        padding-top: 70px;
+        padding-bottom: 70px;
+        padding-inline-end: 30px;
+    }
+    .title-div{
+        .sm-main-title{
+            h3{
+                color: $primary-color;
+                font-size: 28px;
+                margin-bottom: 20px;
+            }
+        }
+    }
+    .download-div{
+        margin-top: 20px;
+        .download-btn{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            border: 1px solid #D9D9D9;
+            color: #532259;
+            font-size: 18px;
+            height: 52px;
+            background-color: #FFFFFF;
+            width: 400px;
+            border-radius: 5px;
+            padding: 15px 45px;
+            font-weight: 500;
+            max-width: 100%;
+        }
+    }
+}
+
+.contact-card{
+    padding: 70px 20px 30px;
+    border: 1px solid #DEDEDE;
+    .whatsapp-div{
+        background-color: #25D366;
+        height: 52px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        margin-top: 15px;
+        border-radius: 5px;
+        i{
+            color: $secondary-color;
+            font-size: 20px;
+        }
+    }
+    .form-group{
+        .personal-title{
+            display: flex;
+            align-items: center;
+            justify-content: start;
+            gap: 15px;
+        }
+        input[type="text"], input[type="email"]{
+            height: 50px;
+            &::placeholder{
+                font-size: 14px;
+                color: #DEDEDE;
+            }
+        }
+        margin-top: 20px;
+        label{
+            margin-bottom: 5px;
+        }
+        .item{
+            border: 1px solid #DEDEDE;
+            height: 48px;
+            width: 85px;
+            background-color: $secondary-color;
+            border-radius: 5px;
+            padding: 10px 15px;
+            color: $primary-color;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+        }
+        .item.active{
+            background-color: #532259;
+            color: $secondary-color;
+        }
+    }
+    .main-btn {
+        height: 65px !important;
+    }
+}
+
+.accordion{
+    --bs-accordion-border-width: none !important;
+}
+
+.accordion-button{
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 10px;
+    .accordion-circle{
+        height: 20px;
+        width: 20px;
+        border-radius: 50%;
+        border: 1px solid #2BB2E1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .accordion-circle.active{
+        height: 20px;
+        width: 20px;
+        border-radius: 50%;
+        border: 1px solid #2BB2E1;
+        .inner-circle{
+            height: 17px;
+            width: 17px;
+            border: 1px solid #FFF;
+            background-color: #2BB2E1;
+            border-radius: 50%;
+        }
+    }
+    &:focus{
+        box-shadow: none;
+    }
+}
+
+.accordion-time{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 15px;
+}
+
+.accordion-item{
+    border: none;
+}
+
+.accordion-button:not(.collapsed){
+    background-color: #FFFFFF;
+}
+
+.terms-section{
+    margin-top: 40px;
+    .terms-div{
+        box-shadow: 0px 0px 10px 0px #0000000F;
+        border: 1px solid #E0E0E0;
+        margin-top: 20px;
+        padding: 20px;
+        border-radius: 5px;
+        .terms-item{
+            display: flex;
+            align-items: start;
+            margin-bottom: 20px;
+            img{
+                margin-top: 5px;
+            }
+            &:last-of-type{
+                margin-bottom: 0px;
+            }
+        }
+    }
+}
+
 .offer-card{
     border: 1px solid #DEDEDE;
     border-radius: 5px;
     padding: 8px;
     img{
         height: 250px;
+        object-fit: cover;
+        width: 100%;
     }
     .card-content{
         padding: 10px;
+        h4{
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
         a{
             color: #532259;
             text-decoration: underline;
             font-size: 14px;
             font-weight: 400;
+        }
+        p{
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+    }
+    .badges{
+        .category-badges{
+            border-radius: 2px;
+            padding: 4px 8px;
+            span{
+                font-size: 12px;
+            }
+        }
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        img{
+            height: 20px;
+            object-fit: contain;
+            width: unset !important;
         }
     }
 }
@@ -546,6 +891,39 @@ footer{
             font-size: 16px;
             font-weight: 400;
             color: $primary-color;
+        }
+    }
+}
+
+#nav-tabs{
+    gap: 20px;
+    .nav-link{
+        background-color: rgba(185, 185, 185, 0.16);
+        -webkit-backdrop-filter: blur(8px);
+        backdrop-filter: blur(8px);
+        padding: 20px 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: $secondary-color;
+        img{
+            filter: grayscale(1);
+        }
+    }
+    .nav-link.active{
+        color: #DDDD01;
+        img{
+            filter: grayscale(0);
+        }
+    }
+}
+
+.offers{
+    .title-div{
+        h3{
+            color: $primary-color;
+            font-size: 28px;
+            margin-bottom: 20px;
         }
     }
 }
