--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1275,18 +1275,18 @@ p .available-on {
   height: 65px !important;
 }
 
+.accordion-body img {
+  height: 300px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  max-width: 100%;
+}
+
 .accordion {
   --bs-accordion-border-width: none !important;
 }
 
-.accordion-button {
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  gap: 10px;
-}
-.accordion-button .accordion-circle {
+.accordion-button.collapsed .accordion-circle {
   height: 20px;
   width: 20px;
   border-radius: 50%;
@@ -1294,33 +1294,78 @@ p .available-on {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  background-color: #fff;
+  z-index: 15;
 }
-.accordion-button .accordion-circle.active {
+.accordion-button.collapsed .accordion-circle .inner-circle {
+  height: 17px;
+  width: 17px;
+  border: 1px solid #FFF;
+  background-color: #FFF;
+  border-radius: 50%;
+}
+
+.accordion-button:not(.collapsed) .accordion-circle {
   height: 20px;
   width: 20px;
   border-radius: 50%;
   border: 1px solid #2BB2E1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  background-color: #fff;
+  z-index: 15;
 }
-.accordion-button .accordion-circle.active .inner-circle {
+.accordion-button:not(.collapsed) .accordion-circle .inner-circle {
   height: 17px;
   width: 17px;
   border: 1px solid #FFF;
   background-color: #2BB2E1;
   border-radius: 50%;
 }
+
+.accordion-button {
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  position: unset !important;
+  gap: 10px;
+}
 .accordion-button:focus {
   box-shadow: none;
 }
 
-.accordion-time {
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  gap: 15px;
+.vertical-line {
+  height: 100%;
+  width: 2px;
+  position: absolute;
+  left: 82px;
+  background-color: #45BCE5;
+  z-index: 4;
 }
 
-.accordion-item {
-  border: none;
+.vertical-line.package-vertical {
+  left: 25px;
+}
+
+.cabin-img {
+  max-width: 100%;
+}
+
+.contact-paragraph {
+  font-size: 16px;
+  color: #3D3D3D;
+}
+
+.custom-fc {
+  margin-top: 70px !important;
+}
+
+.accordion-time {
+  gap: 15px;
 }
 
 .accordion-button:not(.collapsed) {
@@ -1609,6 +1654,75 @@ footer .lower-footer {
   margin-bottom: 20px;
 }
 
+.domestic-details {
+  padding: 60px 0px !important;
+}
+.domestic-details .details-div {
+  padding-top: 0px !important;
+}
+.domestic-details .contact-card {
+  padding: 30px 20px 30px;
+}
+.domestic-details .owl-carousel {
+  padding: 0px 50px;
+  position: relative;
+}
+.domestic-details .owl-nav.disabled {
+  display: flex !important;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  top: 42%;
+  width: 100%;
+  right: 0px;
+}
+.domestic-details .owl-nav.disabled button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 35px;
+  width: 35px;
+  border: 1px solid #000;
+  border-radius: 50%;
+}
+.domestic-details .owl-nav.disabled button span {
+  font-size: 40px;
+  font-weight: 300;
+  margin-bottom: 3px;
+}
+
+.hotel-card {
+  height: 265px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  position: relative;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+}
+.hotel-card h4 {
+  margin-bottom: 30px;
+  font-size: 22px;
+}
+.hotel-card .city-badge {
+  background-color: #FFFFFF;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+.hotel-card .city-badge span {
+  font-size: 12px;
+  padding: 3px 12px;
+  color: #000;
+}
+
 .intl-tel-input,
 .iti {
   width: 100%;
@@ -1675,6 +1789,12 @@ footer .lower-footer {
   }
 }
 @media (max-width: 990px) {
+  .owl-nav.disabled {
+    display: none !important;
+  }
+  .vertical-line {
+    display: none;
+  }
   .offer-end {
     font-size: 14px;
   }
