--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1020,6 +1020,27 @@ i {
   background-color: #E4F5FB;
   border-radius: 50%;
 }
+.service-card .icon-bg img {
+  height: 25px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.icon-bg {
+  margin-inline-end: 10px;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #E4F5FB;
+  border-radius: 50%;
+}
+.icon-bg img {
+  height: 25px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
 
 .static-page .main-title h3 {
   font-size: 28px;
@@ -1338,6 +1359,11 @@ p .available-on {
   box-shadow: none;
 }
 
+.jawak {
+  background-blend-mode: unset !important;
+  height: 100vh !important;
+}
+
 .price-div {
   padding: 20px 15px;
 }
@@ -1411,6 +1437,59 @@ p .available-on {
 }
 .terms-section .terms-div .terms-item:last-of-type {
   margin-bottom: 0px;
+}
+
+.profile .profile-pic-div {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000;
+}
+.profile .profile-pic-div .user-number {
+  color: #DEDEDE;
+}
+.profile #imagePreview {
+  height: 90px;
+  width: 90px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  cursor: pointer;
+}
+.profile .profile-tabs button {
+  width: 100%;
+  background-color: #FFF;
+  border: 1px solid #DEDEDE;
+  border-radius: 5px;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.profile .profile-tabs button span {
+  color: #000;
+  font-weight: 500;
+}
+.profile .profile-tabs button.active {
+  background-color: #F5F5F5;
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1215686275);
+}
+.profile .profile-tabs button.active span {
+  color: #000;
+}
+.profile .tab-item {
+  border: 1px solid #DEDEDE;
+  border-radius: 5px;
+  padding: 15px 20px;
+}
+
+.tab-item-header {
+  display: flex;
+  align-items: center;
+  justify-content: start;
 }
 
 .offer-card {
@@ -1740,6 +1819,48 @@ footer .lower-footer {
   font-size: 12px;
   padding: 3px 12px;
   color: #000;
+}
+
+.est2nas-title h2 {
+  color: #532259;
+  font-size: 48px;
+  font-weight: 500;
+}
+.est2nas-title h4 {
+  color: #666666;
+  font-size: 20px;
+  font-weight: 400;
+}
+.est2nas-title h4 span {
+  color: #2BB2E1;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.est2nas-details {
+  background-color: #F7F7F7;
+}
+.est2nas-details .subscribe {
+  padding: 25px 0px;
+  height: 35px;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  background-color: #532259;
+  color: #FFFFFF;
+  text-align: center;
+}
+.est2nas-details .est2nas-sub-title {
+  line-height: 1.5;
+  margin: 20px 0px 50px;
+}
+.est2nas-details .terms-item {
+  margin-bottom: 30px !important;
+}
+.est2nas-details .terms-item:last-of-type {
+  margin-bottom: 0px !important;
 }
 
 .intl-tel-input,
