--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -804,7 +804,6 @@ p{
     .tab-item{
         border: 1px solid #DEDEDE;
         border-radius: 5px;
-        padding: 15px 20px;
     }
 }
 
@@ -812,6 +811,8 @@ p{
     display: flex;
     align-items: center;
     justify-content: start;
+    padding: 20px 30px;
+    border-bottom: 1px solid #DEDEDE;
 }
 
 .offer-card{
@@ -1195,6 +1196,145 @@ footer{
         margin-bottom: 30px !important;
         &:last-of-type{
             margin-bottom: 0px !important;
+        }
+    }
+}
+
+.no-wrap{
+    text-wrap: nowrap;
+}
+
+.ticket{
+    .d-flex{
+        text-wrap: wrap;
+    }
+}
+
+.stop-2{
+    border-top: 2px dashed #E0E0E0;
+    margin-top: 30px;
+    padding-top: 30px;
+}
+
+.outer-ticket{
+    padding: 40px 30px 20px;
+  }
+  .inner-ticket{
+    border-radius: 5px;
+    overflow: hidden;
+    background-color: #FFFFFF;
+  }
+  .ticket-cover{
+    border: 1px solid #D0D0D0;
+    display: flex;
+    align-items: stretch;
+    height: 100%;
+    width: 100%;
+    border-radius: 8px;
+  }
+  .left-side{
+    width: 70%;
+    border-right: 2px dashed #D0D0D0;
+    position: relative;
+    .extra-info{
+        background-color: #E4F5FB;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+        border-radius: 35px;
+        padding: 5px 15px;
+        margin-bottom: 5px;
+        span{
+            font-size: 14px;
+            color: $primary-color;
+        }
+    }
+    .airline{
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 8px 0px;
+        background-color: #E4F5FB;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        gap: 10px;
+        padding: 8px 15px 8px 5px;
+        .airline-logo{
+            background-color: #FFFFFF;
+            height: 35px;
+            width: 35px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+    .ticket-info{
+        padding: 65px 20px 25px;
+    }
+    .trip-line{
+        height: 2px;
+        border: 2px dashed #DEDEDE;
+        width: 100%;
+        position: relative;
+        img{
+            position: absolute;
+            top: -12px;
+            left: 46%;
+        }
+    }
+  }
+  .right-side{
+    width: 30%;
+  }
+  .circle-div{
+    position: absolute;
+    left: -35px;
+    border: 1px solid #D0D0D0;
+    background-color: #FFFFFF;
+    z-index: 999999;
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+  }
+  .ceil-circle{
+    top: -40px;
+  }
+  .floor-circle{
+    bottom: -40px;
+}
+
+.inner-tabs{
+    margin: 0px 50px;
+    background-color: #F5F5F5;
+    padding: 0px 20px;
+    border-radius: 50px;
+    .nav-link{
+        width: 100%;
+        color: $light-primary-color;
+    }
+    .nav-link.active{
+        background-color: #2BB2E1;
+        border-radius: 50px;
+    }
+}
+
+.outer-tabs{
+    padding: 25px 0px;
+    .nav-pills{
+        border-bottom: 1px solid #D9D9D9;
+        .nav-link{
+            color: $light-primary-color;
+            font-weight: 400;
+        }
+        .nav-link.active{
+            background-color: transparent;
+            border-bottom: 2px solid #532259;
+            border-radius: 0px;
+            color: $primary-color;
+            font-weight: 500;
         }
     }
 }
