--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -328,9 +328,10 @@ input{
 
 select{
     height: 50px;
-    border-radius: 12px !important;
+    border-radius: 6px !important;
     color: #adadad !important;
     font-size: 14px;
+    color: $primary-color;
 }
 textarea{
     border-radius: 12px !important;
