--- a/assets/css/_responsive.scss
+++ b/assets/css/_responsive.scss
@@ -186,6 +186,9 @@
     
 }
 @media(min-width: 991px) and (max-width: 1199px){
+    .vertical-line{
+        left: 71px;
+    }
     nav{
         ul{
             .nav-item{
