--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2125,6 +2125,11 @@ footer .lower-footer {
   font-family: "Swissra";
 }
 
+@media (max-width: 360px) {
+  .account .auth-card .nav-pills .nav-link {
+    font-size: 12px;
+  }
+}
 @media (max-width: 550px) {
   p {
     font-size: 14px !important;
